# dbt-dagsterizer

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  RELEASE_NOTES.md  pyproject.toml
.qoder/repowiki/en/content/: API Reference.md  Development Guide.md  Getting Started.md  Observability and Monitoring.md  Project Overview.md
.qoder/repowiki/en/meta/: repowiki-metadata.json
.qoder/repowiki/knowledge/en/: _index.yaml
docs/: README.md  getting-started.md
docs/concepts/: cli.md  dagster-dbt-code-location-template.md  dagsterization-yml.md  dbt-models.md  execution-model.md  overview.md
docs/development/: codebase-tour.md  package-development.md
docs/templates/dagster-dbt-starrocks-code-location/: README.md  developer_workflow.md  local_development.md  template_usage.md
src/dbt_dagsterizer/: __init__.py  api.py  cli.py  env_utils.py  gitops_env.py  k8s_tags.py  manifest_inputs.py  orchestration_config.py  partitions.py  partitions_dynamic.py  partitions_registry.py
src/dbt_dagsterizer/assets/: __init__.py  version_info.py
src/dbt_dagsterizer/assets/dbt/: assets.py  prepare.py  translator.py  vars.py
src/dbt_dagsterizer/assets/replication/: __init__.py  auto_config.py  executor.py  factory.py
src/dbt_dagsterizer/cli_parts/: app.py  common.py  macros.py  meta.py  project.py  validation.py
src/dbt_dagsterizer/dbt/: __init__.py  manifest.py  manifest_prepare.py  row_counts.py  run_results.py
src/dbt_dagsterizer/jobs/: __init__.py  dbt_config.py
src/dbt_dagsterizer/jobs/dbt/: jobs.py  (+4 more)
src/dbt_dagsterizer/macro_templates/: generate_schema_name.sql  starrocks_layer_schema.sql
src/dbt_dagsterizer/otel/: __init__.py  bootstrap.py  dagster.py
src/dbt_dagsterizer/resources/: __init__.py  dbt.py  mssql.py  starrocks.py
src/dbt_dagsterizer/schedules/: __init__.py  dbt_config.py
src/dbt_dagsterizer/sensors/: __init__.py  dbt_config.py  dynamic_partitions_bootstrap.py
tests/: test_api.py  test_assets_retry.py  test_cli.py  test_cli_dotenv_loading.py  test_cli_meta_generation.py  test_cli_schema_yml_update.py  test_dbt_run_results.py  test_dbt_schedule_presets.py  test_dbt_vars.py  test_dynamic_partitions.py  test_integration_minimal.py  test_k8s_run_env_tags.py  test_manifest_inputs.py  test_manual_spec_compat.py  test_observable_sources.py  test_observe_sources_schedule.py  test_otel.py  test_partition_change_sensor_impact_range.py  test_partition_change_sensor_missing_relation.py  test_partition_change_sensor_watermark_dedupe.py  test_partition_row_counts.py  test_partitions.py  test_prepare_manifest_dotenv_loading.py  test_project_gen_gitops_env.py  test_project_init.py  test_relation_asset_key_path.py  test_replication_assets.py  test_replication_config.py  test_replication_schedules.py  test_replication_validation.py  test_repo_root_discovery.py  test_starrocks_row_counts.py  test_timezone.py
(+96 files in other folders)
