[project]
name = "dbt-dagsterizer"
version = "0.3.0"
description = "Dagster automation driven by dbt metadata (Luban CI)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "cookiecutter>=2.6.0",
    "dagster>=1.12,<2",
    "dagster-dbt>=0.26,<1",
    "dbt-core>=1.9,<2",
    "dbt-starrocks>=1.9,<2",
    "pymysql>=1.1.0",
    "ruamel-yaml>=0.19.1",
]
flowchart LR
    A[dbt manifest props] --> B[relation_asset_key_path]
    B -->|omit empty parts<br/>schema->database when db empty| C[Normalized AssetKey]
    C --> D[Dagster Catalog/Lineage]

    E[manual DBT_JOB_SPECS<br/>legacy ['dbt', model]] --> F[_normalize_manual_job_specs]
    F --> C

    G[manual propagation specs] --> H[_normalize_manual_propagation_specs]
    H --> C

    I[cookiecutter include_sample_dbt_project=true] --> J[post_gen_project flips enable_ods_test=true]
    J --> K[dbt parse includes ods_test nodes]
    K --> D

    style B fill:#bbdefb,color:#0d47a1
    style F fill:#c8e6c9,color:#1a5e20
    style H fill:#c8e6c9,color:#1a5e20
    style J fill:#fff3e0,color:#e65100
[tool.hatch.build.targets.wheel]
packages = ["src/dbt_dagsterizer"]

[tool.hatch.build.targets.wheel.shared-data]
"src/dbt_dagsterizer/project_templates" = "dbt_dagsterizer/project_templates"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.12.0",
]

[project.scripts]
dbt-dagsterizer = "dbt_dagsterizer.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
    "src/dbt_dagsterizer/project_templates",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
